Tue Jan 20 01:31:36 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (lineno): typo fix(FIX2INT -> INT2FIX).

Mon Jan 19 21:53:38 2004  akira yamada  <akira@ruby-lang.org>

	* io.c, re.c, string.c, time.c: fixed up positions of RDocs.

Mon Jan 19 07:09:20 2004  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: zone was wrong when it was behind UTC.
	  Thanks Mark J. Reed.

	* lib/date/format.rb: %z is now always replaced by four digits
	  with a leading plus or minus sign.

	* sample/cal.rb: added a class, anyway.

Sun Jan 18 20:47:35 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ruby.c: use translate_char() on Cygwin.

Sun Jan 18 02:33:26 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* defines.h (_WIN32): undef _WIN32 on Cygwin before defining DOSISH.

Thu Jan 15 13:03:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_read): do not append EOF.  (ruby-bugs-ja:PR#585)

	* io.c (rb_io_fwrite): ad-hockery hack to get rid of HP-UX stdio
	  weird behavior.  [ruby-dev:22424]

Wed Jan 14 13:31:06 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/extconf.rb: wrapper iconv.rb is dependent on platform.

Tue Jan 13 18:54:28 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/logger.rb(Logger#msg2str): no special treatment for the object
	  which responds to :to_str.  commited at 2004-01-11T21:46:27 by
	  gsinclair.

	* lib/logger.rb(LogDevice#initialize): remove type checking if the
	  given object is a String.  Kernel.open handles it correctly.
	  commited at 2004-01-11T21:46:27 by gsinclair.

	* test/logger/test_logger.rb: follow above change (ArgumentError ->
	  TypeError.)  follow above commit.

Tue Jan 13 14:27:13 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/test/unit/ui/testrunnerutilities.rb (TestRunnerUtilities):
	  moved run method which allows output level.  [ruby-dev:22554]

Tue Jan 13 04:29:52 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_driver.rb (RiDriver::report_method_stuff):